# create-python-proj

./: .gitignore  LICENSE  README.md  create_python_proj.sh  pyproject.toml
create_python_proj/: main.py
