[project]
name = "create-python-proj-wiresv"
version = "1.0.3"
authors = [{ name = "wiresvr", email = "austinhwx@gmail.com" }]
description = "Set up a modern Python project by running one command."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"

[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "create-python-proj"
version = "1.0.3"
description = "Set up a modern Python project by running one command."
authors = ["wiresv <austinhwx@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
create-python-proj = "create_python_proj.main:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
mypy = "^1.1.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.2.2"
pytest-sugar = "^0.9.6"
