[tool.poetry]
name = "create-python-proj"
version = "1.0.6"
description = "Set up a modern Python project by running one command."
authors = ["wiresv <austinhwx@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["create_python_proj.sh"]

[tool.poetry.scripts]
create-python-proj = "create_python_proj.main:main"

[tool.poetry.urls]
"Source Code" = "https://github.com/wiresv/create-python-proj"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
mypy = "^1.1.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.2.2"
pytest-sugar = "^0.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
strict = true
follow_imports = "skip"       # replace with "silent" when implemented in dmypy
ignore_missing_imports = true # ignore missing type stubs of all imports
show_column_numbers = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--no-header"
testpaths = ["tests", "integration"]
